<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brutalcorpse.calculadoradegastos.MainActivity">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="23dp" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="UselessParent">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/str_fecha"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="date"
                                android:ems="10"
                                android:id="@+id/mainFecha"
                                android:layout_weight="1"
                                android:editable="false"
                                tools:ignore="Deprecated" />

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/str_tipo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.27" />

                            <Spinner
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/spinnerTipo"
                                android:layout_weight="1" />

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/str_valor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"
                                android:ems="10"
                                android:id="@+id/mainValor"
                                android:layout_weight="1"
                                android:enabled="true" />
                        </LinearLayout>

                        <Button
                            android:text="@string/str_agregar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/mainBoton"
                            android:onClick="eventoListenerBoton"
                            style="@style/Widget.AppCompat.Button.Colored" />

                        <Button
                            android:text="Total"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/mainTotal"
                            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                            android:onClick="eventoBotonTotal"
                            android:gravity="bottom|right|end" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/str_filtrar" />

                            <Spinner
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/spinnerfiltro"
                                android:layout_weight="2.05" />
                        </LinearLayout>

                        <ListView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/mainListView" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/str_vivienda"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned"
                            android:ems="10"
                            android:id="@+id/viewVivienda"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/str_alimentacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:ems="10"
                            android:id="@+id/viewAlimentacion"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/str_educacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:ems="10"
                            android:id="@+id/viewEducacion"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/str_salud"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:ems="10"
                            android:id="@+id/viewSalud"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/str_vestimenda"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:ems="10"
                            android:id="@+id/viewVestimenta"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:text="GUARDAR"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnGuardar"
                            android:layout_weight="1"
                            android:onClick="eventoBotonGuardar"
                            style="@style/Widget.AppCompat.Button.Colored" />

                        <Button
                            android:text="ELIMINAR ITEMS"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnEliminar"
                            android:layout_weight="1"
                            android:onClick="eventoBotonEliminar"
                            style="@style/Widget.AppCompat.Button.Colored" />
                    </LinearLayout>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
